Fix change route product list flicker problem.

--- a/app/routes/__index/styles/ProductList.scss
+++ b/app/routes/__index/styles/ProductList.scss
@@ -5,22 +5,16 @@
 	margin: 0 auto;
 	width: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	flex-wrap: wrap;
 	align-items: center;
-	// margin-top: 80px;
 
 	@media (min-width: #{$screen-md-min}) and (max-width: #{$screen-xl-min}) {
 		max-width: 992px;
-		// margin-top: 145px;
-	}
-
-	@media (min-width: $screen-xl-min) and (max-width: $screen-1600-min) {
-		// margin-top: 160px;
 	}
 
 	@media (min-width: $screen-1600-min) {
-		// margin-top: 172px;
 		width: 1100px;
 	}
 }
@@ -83,6 +77,6 @@
 	}
 }
 
-.Index__stuff {
-	height: 50px;
-}
+// .Index__stuff {
+// 	height: 50px;
+// }
